// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-loader snapshot with body 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

const layoutProps = {};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout {...layoutProps} {...props} components={components}>
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with frontmatter 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

const layoutProps = {};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout {...layoutProps} {...props} components={components}>
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3]
};

`;

exports[`mdx-loader snapshot with frontmatter-layout 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

const layoutProps = {};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout {...layoutProps} {...props} components={components}>
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3]
};

`;

exports[`mdx-loader snapshot with frontmatter-layout-namedExports 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

export const meta = {
  author: "chris"
};
const layoutProps = {
  meta
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout {...layoutProps} {...props} components={components}>
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3]
};

`;

exports[`mdx-loader snapshot with frontmatter-namedExports 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

export const meta = {
  author: "chris"
};
const layoutProps = {
  meta
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout {...layoutProps} {...props} components={components}>
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3]
};

`;

exports[`mdx-loader snapshot with layout 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

const layoutProps = {};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout {...layoutProps} {...props} components={components}>
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with layout-namedExports 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

export const meta = {
  author: "chris"
};
const layoutProps = {
  meta
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout {...layoutProps} {...props} components={components}>
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with namedExports 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

export const meta = {
  author: "chris"
};
const layoutProps = {
  meta
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout {...layoutProps} {...props} components={components}>
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {};

`;
